--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
   "devDependencies": {
     "@eslint/js": "^9.31.0",
     "css-loader": "^7.1.2",
+    "date-fns": "^4.1.0",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
     "globals": "^16.3.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "prettier": "3.6.2",
+    "sass": "^1.89.2",
+    "sass-loader": "^16.0.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.100.2",
     "webpack-cli": "^6.0.1",
